@@ -1,6 +1,11 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-3/7/14: Updated the Join tutorial.(Bug# 1785)
+3/8/14: Fixed deferring of initial messages to 3dmod on Mac (In 4.7).
+
+3/8/14: Fixed lack of title bar and initial placement of toolbar for linked 
+slicers (In 4.7).
+
+3/7/14: Updated the Join tutorial (In 4.7).(Bug# 1785)
 
 3/5/14: IMOD_4-7-1
 3/5/14: In eTomo - PEET, made sure that empty attributes will not generate
